--- a/android/app/src/main/res/xml/filepaths.xml
+++ b/android/app/src/main/res/xml/filepaths.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths>
-    <files-path path="/sdcard/WhatsApp/Media/.Statuses" name="whatsappstatuses" />
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <external-path
+        name="external_files"
+        path="." />
+    <files-path
+        name="files-path"
+        path="." /> <!-- Used to access into application data files -->
 </paths>
